# ChangeLog for kde-misc/kio_perldoc
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/kde-misc/cvs-repo/gentoo-x86/kde-misc/kio_perldoc/Attic/ChangeLog,v 1.2 2008/11/13 13:59:16 scarabeus Exp $

  13 Nov 2008; Tomas Chvatal <scarabeus@gentoo.org> kio_perldoc-0.9.ebuild:
  Update ebuild, so it works with current kde4.

*kio_perldoc-0.9 (16 Jun 2008)

  16 Jun 2008; Ingmar Vanhassel <ingmar@gentoo.org>
  +files/kio_perldoc-0.9-kdeexport.patch, +kio_perldoc-0.9.ebuild:
  Initial import of kio_perldoc, a KIO slave to read perldoc output. Ebuild
  by Tanktalus, fixes bug 227661.
