@@ -1,5 +1,5 @@
 AUX kio_perldoc-0.9-kdeexport.patch 622 RMD160 94027f3e7bd69751fcf0c44c54ab2ea6602886f5 SHA1 461fec927831c194e5de2c8e2a7de33b40ce139c SHA256 5a3302be4e184a362149036a92f4b40448d64a92bf6eae6577518b564e5bbf23
 DIST kio_perldoc-0.9.tar.bz2 21704 RMD160 1a8a43f59c527657994b027908ffc35b2b8c20bf SHA1 385d3e89249867a9135ddbac639775a58cafd45d SHA256 636e2585c67c39f444623f53c44a93cb479643060b6a20e19822a51ce81719c9
-EBUILD kio_perldoc-0.9.ebuild 577 RMD160 34a4bd7adfc4feb87cb5ed16f8acd7cf5c8f40e8 SHA1 d793f36820f7730532eda7a3c230339253b4762e SHA256 49d227163644d0d3415acf76ace60ef5e1c293b8a00d3a76495f9b5e48fd52ed
-MISC ChangeLog 603 RMD160 439c895a85a1e4250cdcc1a0c8097ca5301a7b3a SHA1 2d5efcc0c4ee38051e6ab7ea21244d196e8c6e0f SHA256 f38fea83fa325fbc4c64b2f135e556fa6db47271ea33dac8b0971709f8f84042
+EBUILD kio_perldoc-0.9.ebuild 577 RMD160 8fcc1979e4cdb1b3fcaed0643b768f5564e3b356 SHA1 6892a75f16e85ccada37334a1fd3c4a140cedf96 SHA256 6ad4daa8e0289d5906a8f2b29a36c4762bd77abf74f4a34faa57806e2f4233a5
+MISC ChangeLog 720 RMD160 4c6263580feb19dd007fcf607304b4709f6474e1 SHA1 7823f1b5af937fa749f689048e3839cbf96d766d SHA256 52ed783b038ee2ad180e1d3fb62ac57c89511acd0886dde376e318745546c870
 MISC metadata.xml 157 RMD160 09fb7b798f3f68127626e97c69e5215a0513ecbb SHA1 d5ffebb2f4248fc8f65ab21c3af6e4f5dbf8bf6e SHA256 01f6fa4357ce08e8b0f7900a51fa78c7f060fefc7c7da98acaec1e283dd59892
